# skin_detection

./: CMakeLists.txt  README.md  browse.h  main.cc  skin_detection.cc  skin_detection.h  stb_image.h  stb_image_write.h
